--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,11 @@
     "type": "project",
     "require": {
         "php": "^7.2",
-        "fideloper/proxy": "^4.0",
         "doctrine/dbal": "^2.9",
+        "fideloper/proxy": "^4.0",
         "intervention/image": "^2.4",
         "laravel/framework": "^6.0",
+        "laravel/socialite": "^4.3",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^6.0",
         "silber/bouncer": "v1.0.0-rc.6"
@@ -17,6 +18,7 @@
     "require-dev": {
         "facade/ignition": "^1.4",
         "fzaninotto/faker": "~1.4",
+        "laravel/ui": "^1.0",
         "mockery/mockery": "^1.0",
         "phpunit/phpunit": "~8.0"
     },
