--- a/.env.example
+++ b/.env.example
@@ -43,6 +43,6 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-FACEBOOK_KEY=
-FACEBOOK_SECRET=
+FACEBOOK_KEY=214888636410038
+FACEBOOK_SECRET=c4c1a9b546a6c07780aa4d30957ea339
 FACEBOOK_REDIRECT_URI=http://localhost:8000/login/facebook/callback
